@@ -2,4 +2,5 @@ deadly
 playerSeeking
 mobile
 onTopOfPlayer
+interactingWithPlayer
 darkHaloBehind
